--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -29,7 +29,7 @@ html, body {
   color: white;
   padding: 5px;
   margin: 0 auto;
-  text-shadow: 1px 1px 2px rgb(1, 1, 56);
+  text-shadow: 1px 1px 3px black;
   overflow: hidden;
   font-size: adjust;
   width: 100%;
@@ -44,7 +44,7 @@ html, body {
   background-position: bottom right;
   background-size: cover;
   object-position: center;
-  border-bottom: 10px solid rgb(1, 1, 56);
+  border-bottom: 10px solid rgba(200, 200, 200, 0.5);
 }
 
 
@@ -185,9 +185,11 @@ local{
 .red{
   border: 1px solid red;
 }
+
 .blue{
   border: 1px solid blue;
 }
+
 .orange{
   border: 1px solid orange;
 }
