--- a/templates/tours.html
+++ b/templates/tours.html
@@ -46,28 +46,25 @@
 <!-- Port Description & Image -->
 {% for tour in tours%}
 <div class="row" id="reviewArea">
-  <div class="col-12 col-md-6 col-lg-9">
+  <div class="col-12 col-md-6 col-lg-6">
     <div class='{{tour.port_id}} col text-center'>
       <section class="portImage">
         <h5 id="accountHeader"> <a href="/tours/{{ tour.tour_id }}">{{tour.port_name}}</a></h5>
         <hr class="mt-0 mb-4"/> 
         <div id="ports" class="{{tour.state_name}}">
-        <!-- linebreak above -->
-        <img class="image" src="/static/img/{{ tour.port_name.split()[-1] }}.jpeg" alt="{{ tour.port_name.split()[-1] }}">
-         <!-- <p>{{ tour.port_name.split()[-1] }}</p> -->
+          <img class="image" src="/static/img/{{ tour.port_name.split()[-1] }}.jpeg" alt="{{ tour.port_name.split()[-1] }}">
          </div>
          <p> </p>
-        
       </section>
     </div>
   </div>
 
-  <div class="col-12 col-md-6 col-lg-9">
+  <div class="col-12 col-md-6 col-lg-6">
       <section class="sidebar">
         <h5 id="accountHeader">Port Activities</h5>
         <hr class="mt-0 mb-4"/> 
           <ul class="featureInput" id="{{ tour.port_name.split()[-1] }}">
-            <li>loops</li>
+            
           </ul>
       </section>
     
@@ -85,7 +82,7 @@
 </div>
 
 <!-- script -->
-<script src="/static/scripts/filler.js"></script>
+<script src="/static/scripts/toursPage.js"></script>
 
 
 {% endblock %}
