updated homepage TODO ts images

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,7 +8,7 @@
     <h1 id="accountHeader">Nautical Tours</h1>
 
 <!-- main about section below  -->
-      <p class="quotes">Best Experience on the seven seas, sailing into your dream vacation and beyond...</p>
+      <p class="quotes">Best Experience on the seven seas, sailing you into your dream vacation and beyond...</p>
   </div>
 
 <!-- Port Description & Image -->
