--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -41,8 +41,8 @@
     <div>
       <h5><span class="about"></span></h5>
       <div class="about">
-        <p>We have an incredibly high energy crew that loves to tailor every trip to each tour group. As a family run charter we offer a home style comfort. Our tours accomodate all skill levels of seafarers. We make sure fresh espresso is available every morning to help get the most out of everyday.</p>
-        <p>If you want to contact us, learn more about our business ventures or drop us a line please click the button below</p>
+        <p>We have an incredibly high energy crew that loves to tailor every trip to each tour group. As a family run charter we offer a home style comfort. Our tours accommodate all skill levels of seafarers. We make sure fresh espresso is available every morning to help get the most out of everyday.</p>
+        <p>If you want to contact us, learn more about our business ventures, or drop us a line please click the button below</p>
       </div>
         <a href="/about" id="learnMore"><button type="button" class="btn btn-info">Learn More</button></a>
         <p></p>
