--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-   <!-- base.html NEED TO BE UPDATED NAV DROPDOWN & Javascript default-->
+   <!-- base.html -->
 
 <!DOCUTYPE html>
     <html lang="en">
@@ -70,8 +70,6 @@
       {% for msg in get_flashed_messages() %}
     <p class="flash-msg alert alert-dark" role="alert">{{ msg }}</p>
       {% endfor %}
-
-   
     
     {% block body %}{% endblock %}
 
