updated templates ts  TODO ts images

--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
 <!-- main about section below  -->
 <p class="about">This is a family run business that has been leading tours for almost 30 years. We have applied our ever-growing mastery of adventure seeking, fine cuisine, and safety standards. Every year we learn something new and love adding new adventures. We love feed back, so please drop us a line below.</p>
 
-<!-- Comments Here -->
+<!-- Sendgrid (Twilio) form-->
 
     <fieldset class="cols spacing" id="fields">
       <div class="row sendgrid">
