--- a/templates/account.html
+++ b/templates/account.html
@@ -3,7 +3,6 @@
 
 {% block body %}
 
-
 <!--Profile View: Name, Birthday, Tours Saved, Tours Booked-->
 <div class="container">
   <h2 id="accountHeader">Account Information</h2>
@@ -83,20 +82,19 @@
       </div>
     </div>
   </section>
-     <!--Log Out of Account-->
-   
+ 
+<!--Log Out of Account-->
 <div class="row">
   <div class="col text-center">
     <fieldset id="plain">
       <form action='/logout' method="POST">
-        <!--Form:submit button-->
+        <!--log out:submit button-->
         <input type="submit" value="Log Out" class="btn btn-secondary" id="logout-button">
       </form>
     </fieldset>
   </div>
 </div>
  
-
  
 </div>
  <!-- script -->
