--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -26,7 +26,7 @@
         <div class="row loginPage">       
         <input class="blocktwo" type="tel" id="phone" name="phone" placeholder="555-555-5555" pattern="1? ?[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
     </div>
-    <!--Create New Account Birthday-->
+    <!-- Birthday -->
     <div class="row loginPage">
     <label for="birthday" class="label">Birthday</label>
     </div>
