--- a/templates/tours.html
+++ b/templates/tours.html
@@ -5,7 +5,7 @@
 <div class="container">
 <h1 id="accountHeader">Adventure Tours</h1>
 
-<!-- Cards of various tours to switch through -->
+<!-- BootStraps Carousel Start-->
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -13,7 +13,7 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner">
-    <!-- establishing the inner carousel -->
+    <!-- Inner Carousel -->
     {% for tour in tours %}
       {% if tours[0].tour_id == tour.tour_id %}
       <div class="carousel-item active">
@@ -38,10 +38,8 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-
-<!-- Cards of various tours to switch through -->
+<!-- end of inner Carousel-->
 </div>
-
 
 <!-- Port Description & Image -->
 {% for tour in tours%}
@@ -72,7 +70,6 @@
 </div>
 {% endfor %}
  
-
 <!-- Final Spacer -->
 <div class="row">
   <div class="col text-center">
@@ -83,6 +80,5 @@
 
 <!-- script -->
 <script src="/static/scripts/toursPage.js"></script>
-
 
 {% endblock %}
