--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,11 +3,11 @@
 
 {% block body %}
 <div class="container">
-<!-- cover art -->
+<!-- Cover Art -->
   <div class="cover">
     <h1 id="accountHeader">Nautical Tours</h1>
 
-<!-- main about section below  -->
+<!-- Cover Art Quote  -->
       <p class="quotes">Best Experience on the seven seas, sailing you into your dream vacation and beyond...</p>
   </div>
 
