--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -18,7 +18,7 @@
         <input class="blocktwo" type="text" name="email" placeholder="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>    
     </div>
     <div class="row loginPage">
-        <input class="blocktwo" type="password" name="password" placeholder="password"  required>
+        <input class="blocktwo" type="password" name="password" placeholder="password" id="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
     </div>
     <div class="row loginPage">
         <label for="phone" class="label">Phone</label>
@@ -41,6 +41,14 @@
 </fieldset>
 
 <!-- TODO: place password restrictions here -->
+<div id="message">
+    <h3>Password must contain the following:</h3>
+    <div  id="letter" class="invalid"><span class="fa fa-remove icons" id="icons"></span><p style="display: inline">A <b>lowercase</b> letter</p></div>
+    <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+    <p id="number" class="invalid">A <b>number</b></p>
+    <p id="length" class="invalid">Minimum <b>8 characters</b></p>
+  </div>
+
 </div>
 
 {% endblock %}
