--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -49,7 +49,7 @@ html, body {
   display: none;
   } 
 
-.class {
+.class, .para {
   display: inline;
 }
 
@@ -68,7 +68,7 @@ html, body {
   min-height: 80px;
 }
 
-#fields{
+#fields, .fields{
   border: 1px solid rgba(120, 120, 120, 0.5);
   width: 400px;
   margin: 30px auto 30px;
@@ -185,10 +185,10 @@ html, body {
 
 .invalid:before {
   position: relative;
-  /* left: -35px; */
-  /* content: "&#10006;"; */
+  /* left: -35px; 
+  content: "&#10006;"; */
 }
 
-#icons{
-  margin: 0 35px 0 0;
+.icons{
+  margin: 0 35px 0 50px;
 }
