signup page TODO reviews

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -46,7 +46,8 @@
 <div class="row center">
 <div id="message" class="fields">
     <h5 class="text-center">Password must contain the following:</h5>
-    
+    <hr class="mt-0 mb-4">
+
     <div id="letter" class="invalid"><span class="fa fa-remove icons"></span><p class="para">A lowercase letter</p></div>
     <div id="capital" class="invalid"><span class="fa fa-remove icons"></span><p class="para">A capital (uppercase) letter</p></div>
     <div id="number" class="invalid"><span class="fa fa-remove icons"></span><p class="para">A number</p></div>
