signup page TODO reviews

--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -42,7 +42,7 @@
 </fieldset>
 </div>
 
-<!-- TODO: place password restrictions here -->
+<!-- password requirements here -->
 <div class="row center">
 <div id="message" class="fields">
     <h5 class="text-center">Password must contain the following:</h5>
